--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,5 +1,5 @@
 url=https://naveenautomationlabs.com/opencart/
-browser=edge
+browser=chrome
 parallel=true
 username=bipinmnair89@gmail.com
 password=testwebsite
